--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,15 @@
-seed: 42
 train_data: "data/samples:10_000_train_data_totalnodes:10.pt"
-validation_split: 0.2
-test_data: "data/samples:10_000_test_data_totalnodes:10.pt"
+seed: 42
+n_epochs: 10
 batch_size: 32
+validation_split: 0.2
+num_workers: 4
 
-# Game settings
-communication_type: "human"
+# Optuna:
+n_trials: 20
+lr_choices:   [0.0001, 0.0005, 0.001, 0.005]
+temp_choices: [1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 5.0]
+
+# game_module params:
 mode: "gs"
-temperature: 1.5
-n_epochs: 30
-
-# Model hyperparameters
-max_len: 10
-vocab_size: 50
-sender_hidden: 32
-receiver_hidden: 32
-sender_embedding: 32
-receiver_embedding: 32
-
-# Graph settings
-distance_bins: 10
-
+communication_type: "bee"
