--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,21 @@
 train_data: "data/samples:10_000_train_data_totalnodes:10.pt"
 seed: 42
-n_epochs: 10
+n_epochs: 6
 batch_size: 32
 validation_split: 0.2
 num_workers: 4
+lr: 0.001
+temperature: 2.5
 
 # Optuna:
-n_trials: 20
-lr_choices:   [0.0001, 0.0005, 0.001, 0.005]
-temp_choices: [1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 5.0]
+n_trials: 30
+hidden_choices: [32, 64, 128, 256]
+embedding_choices: [32, 64, 128]
+max_len_choices: [10, 20, 30, 50]
+vocab_size_choices: [20, 50, 100]
+sender_cell_choices: ["rnn", "gru", "lstm"]
+receiver_cell_choices: ["rnn", "gru", "lstm"]
 
 # game_module params:
 mode: "gs"
-communication_type: "bee"
+communication_type: "human"
